# convex_agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
convex/: conversationHistory.ts  convex.config.js  http.ts  instagramDm.ts  knowledge.ts  schema.ts  signalConversations.ts
docker/: Dockerfile.service
docs/evals/: Beforest_DM_Evaluation_Plan.md  Beforest_DM_Instagram_Live_Runbook.md  Beforest_DM_Success_Dashboard.md  beforest_dm_100_live_2026-04-01.csv  beforest_dm_eval_template.json  beforest_dm_smoke_2026-04-01.csv
examples/beforest-conversational-agent/: .env.example  .gitignore  AGENTS.md  BEFOREST LIFESTYLE SOLUTIONS- NARRATIVE 2025.docx.md  README.md  agent.py  check_browser.py  knowledge_center.py  pyproject.toml  server.py  sync_knowledge_to_convex.py  tools.py
examples/beforest-conversational-agent/knowledge/: collectives.md  contact_and_next_steps.md  overview.md
examples/beforest-conversational-agent/skills/company-qa/: SKILL.md
scripts/: run_beforest_dm_eval.py  sync_beforest_experiences_to_outline.py
src/: streamlit_app.py
src/agents/: agents.py  beforest_agent.py  beforest_tools.py
src/agents/beforest/: AGENTS.md
src/client/: client.py
src/core/: settings.py
src/service/: service.py
src/service/static/: beforest_admin.css  beforest_admin.js
src/service/templates/: beforest_admin.html  (+1 more)
tests/agents/: test_beforest_tools.py
tests/app/: test_streamlit_app.py
tests/client/: test_client.py
tests/service/: conftest.py  test_auth.py  test_service.py
