[project]
name = "beforest-conversational-agent"
version = "0.1.0"
description = "Beforest-focused conversational agent built with deepagents"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.5.0a2",
    "fastapi>=0.115.0",
    "langchain>=1.0.0",
    "langchain-openai>=1.0.0",
    "playwright>=1.53.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "uvicorn>=0.30.0",
]

[dependency-groups]
dev = []


